--- a/index.ipynb
+++ b/index.ipynb
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "neighbors = [{'name': 'Bob', 'x': 4, 'y': 8, 'purchases': 52}, {'name': 'Suzie', 'x': 1, 'y': 11, 'purchases': 70}, \n",
-    "             {'name': 'Fred', 'x': , 'y': 8, 'purchases': 60}, {'name': 'Edgar', 'x': 6, 'y': 13, 'purchases': 20},\n",
+    "             {'name': 'Fred', 'x': 5, 'y': 8, 'purchases': 60}, {'name': 'Edgar', 'x': 6, 'y': 13, 'purchases': 20},\n",
     "             {'name': 'Steven', 'x': 3, 'y': 6, 'purchases': 32}, {'name': 'Natalie', 'x': 5, 'y': 4, 'purchases': 45}]\n",
     "bob = neighbors[0]\n",
     "suzie = neighbors[1]"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,11 +109,11 @@
           "Natalie: 45"
          ],
          "type": "scatter",
-         "uid": "76243ebe-e057-11e8-9eff-0242ac110006",
+         "uid": "82c6e1bc-e057-11e8-9eff-0242ac110006",
          "x": [
           4,
           1,
-          2,
+          5,
           6,
           3,
           5
@@ -138,10 +138,10 @@
        }
       },
       "text/html": [
-       "<div id=\"f076a368-879c-47f6-8e90-c05c85c0cbf6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f076a368-879c-47f6-8e90-c05c85c0cbf6\", [{\"mode\": \"markers\", \"text\": [\"Bob: 52\", \"Suzie: 70\", \"Fred: 60\", \"Edgar: 20\", \"Steven: 32\", \"Natalie: 45\"], \"x\": [4, 1, 2, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"76284522-e057-11e8-9eff-0242ac110006\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b7acee7d-51c6-4349-9d11-0554adee8ad4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b7acee7d-51c6-4349-9d11-0554adee8ad4\", [{\"mode\": \"markers\", \"text\": [\"Bob: 52\", \"Suzie: 70\", \"Fred: 60\", \"Edgar: 20\", \"Steven: 32\", \"Natalie: 45\"], \"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"82cac1ba-e057-11e8-9eff-0242ac110006\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f076a368-879c-47f6-8e90-c05c85c0cbf6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f076a368-879c-47f6-8e90-c05c85c0cbf6\", [{\"mode\": \"markers\", \"text\": [\"Bob: 52\", \"Suzie: 70\", \"Fred: 60\", \"Edgar: 20\", \"Steven: 32\", \"Natalie: 45\"], \"x\": [4, 1, 2, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"76284522-e057-11e8-9eff-0242ac110006\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b7acee7d-51c6-4349-9d11-0554adee8ad4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b7acee7d-51c6-4349-9d11-0554adee8ad4\", [{\"mode\": \"markers\", \"text\": [\"Bob: 52\", \"Suzie: 70\", \"Fred: 60\", \"Edgar: 20\", \"Steven: 32\", \"Natalie: 45\"], \"x\": [4, 1, 5, 6, 3, 5], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"82cac1ba-e057-11e8-9eff-0242ac110006\"}], {\"xaxis\": {\"dtick\": 1}, \"yaxis\": {\"dtick\": 1}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
